<resources>
    <string name="A1_category">Motocicletas de 125 cc</string>
    <string name="A2_category">Motocicletas de más de 125 cc</string>
    <string name="B1_category">Automóviles servicio particular</string>
    <string name="B2_category">Camiones servicio particular</string>
    <string name="B3_category">Vehículos articulados para el servicio particular</string>
    <string name="C1_category">Automóviles servicio público</string>
    <string name="C2_category">Camiones servicio público</string>
    <string name="C3_category">Vehículos articulados servicio público</string>
    <string name="IA1_category">Instructor - Motocicletas de 125 cc</string>
    <string name="IA2_category">Instructor - Motocicletas de más de 125 cc</string>
    <string name="IB1_category">Instructor - Automóviles servicio particular</string>
    <string name="IB2_category">Instructor - Camiones servicio particular</string>
    <string name="IB3_category">Instructor - Vehículos articulados para el servicio particular</string>
    <string name="IC1_category">Instructor - Automóviles servicio público</string>
    <string name="IC2_category">Instructor - Camiones servicio público</string>
    <string name="IC3_category">Instructor - Vehículos articulados servicio público</string>
    <string name="RC1_category">Re categorización C1</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_available">Disponible</string>
    <string name="about_copy_to_clipboard">Copiar al portapapeles</string>
    <string name="about_not_available">No disponible</string>
    <string name="action_popup">Configuraciones emergentes</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_settings_aulapp">Settings</string>
    <string name="action_sync">Sincronizar</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="angle">Ángulo</string>
    <string name="answer_no">No</string>
    <string name="answer_yes">Sí</string>
    <string name="app_name">Aulapp instructores</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_stabilise_info">La nivelación automática rotará automáticamente las fotos para que aparezcan niveladas. Tenga en cuenta que esto significa que las imágenes aparecerán con una resolución PngjException ligeramente más baja (debido a la rotación y el recorte que se requiere).</string>
    <string name="auto_stabilise_not_supported">Lo sentimos, el nivel automático no es compatible con este dispositivo</string>
    <string name="back_camera">Camara trasera</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bright">Brillante</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_finish">TERMINAR</string>
    <string name="btn_title_continue">Continuar</string>
    <string name="btn_title_exit">Finalizar</string>
    <string name="button_name_biometric_registration">Registrar huellas</string>
    <string name="button_name_biometric_verify">Verificar huellas</string>
    <string name="button_title_error_endpoint">Reintentar</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="calltinit">Necesitas llamar al método tint()</string>
    <string name="camera">Cámara</string>
    <string name="camera_error">Error grave de la cámara</string>
    <string name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
    <string name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
    <string name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
    <string name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
    <string name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
    <string name="cameraview_filter_cross_process">com.otaliastudios.cameraview.filters.CrossProcessFilter</string>
    <string name="cameraview_filter_documentary">com.otaliastudios.cameraview.filters.DocumentaryFilter</string>
    <string name="cameraview_filter_duotone">com.otaliastudios.cameraview.filters.DuotoneFilter</string>
    <string name="cameraview_filter_fill_light">com.otaliastudios.cameraview.filters.FillLightFilter</string>
    <string name="cameraview_filter_gamma">com.otaliastudios.cameraview.filters.GammaFilter</string>
    <string name="cameraview_filter_grain">com.otaliastudios.cameraview.filters.GrainFilter</string>
    <string name="cameraview_filter_grayscale">com.otaliastudios.cameraview.filters.GrayscaleFilter</string>
    <string name="cameraview_filter_hue">com.otaliastudios.cameraview.filters.HueFilter</string>
    <string name="cameraview_filter_invert_colors">com.otaliastudios.cameraview.filters.InvertColorsFilter</string>
    <string name="cameraview_filter_lomoish">com.otaliastudios.cameraview.filters.LomoishFilter</string>
    <string name="cameraview_filter_none">com.otaliastudios.cameraview.filter.NoFilter</string>
    <string name="cameraview_filter_posterize">com.otaliastudios.cameraview.filters.PosterizeFilter</string>
    <string name="cameraview_filter_saturation">com.otaliastudios.cameraview.filters.SaturationFilter</string>
    <string name="cameraview_filter_sepia">com.otaliastudios.cameraview.filters.SepiaFilter</string>
    <string name="cameraview_filter_sharpness">com.otaliastudios.cameraview.filters.SharpnessFilter</string>
    <string name="cameraview_filter_temperature">com.otaliastudios.cameraview.filters.TemperatureFilter</string>
    <string name="cameraview_filter_tint">com.otaliastudios.cameraview.filters.TintFilter</string>
    <string name="cameraview_filter_vignette">com.otaliastudios.cameraview.filters.VignetteFilter</string>
    <string name="cancelled_burst_mode">Modo ráfaga cancelado</string>
    <string name="cancelled_timer">Temporizador cancelado</string>
    <string name="cant_access_folder">No puedo acceder a esta carpeta</string>
    <string name="cant_write_folder">No puedo escribir en esta carpeta.</string>
    <string name="capturing">Capturing…</string>
    <string name="ceas_text_input_hint">Seleccione CEA</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="content_item_logout_menu_instructor_trainee_query">item cerrar Sesion</string>
    <string name="content_item_title_menu_instructor_trainee_query">Cerrar sesion</string>
    <string name="id_authentication_retake">¡No logramos validar tu identidad!\nintenta de nuevo.</string>
    <string name="id_dshow_again">No mostrar de nuevo</string>
    <string name="id_hold_still">Asegúrate de quedarte quieto hasta la captura automática</string>
    <string name="id_image_cd_todo">todo</string>
    <string name="id_in_front_camera">2.Coloque los dedos frente a la cámara</string>
    <string name="id_intro_roll_front_camera">1. Keep finger parallel to camera inside the UI box.</string>
    <string name="id_intro_roll_stay_still_blue">2. Wait for auto capture.</string>
    <string name="id_intro_roll_twist_down">3. Twist finger 45º to capture one side of finger following the arrow.</string>
    <string name="id_intro_roll_twist_up">4. Twist finger 45º to capture the other side of finger following the arrow.</string>
    <string name="id_keep_fingers">1.Extender y mantener los dedos juntos.</string>
    <string name="id_next">SIGUIENTE</string>
    <string name="id_ocr_capture_document">CAPTURA TU DOCUMENTO</string>
    <string name="id_ocr_continue">CONTINUAR</string>
    <string name="id_ocr_dshow_again">No mostrar de nuevo</string>
    <string name="id_ocr_front_back_side">AMBOS LADOS FRONTAL Y POSTERIOR</string>
    <string name="id_ocr_gallery_instructions">Toca continuar y, desde la galería, selecciona el lado frontal de tu identificación, luego selecciona el lado posterior.</string>
    <string name="id_ok">OK</string>
    <string name="id_pic_qc_title">CALIDAD DE IMAGEN FALLIDA</string>
    <string name="id_qc_retake">Tenemos que volver a tomar la foto.</string>
    <string name="id_quality_failed">Calidad de imagen fallida</string>
    <string name="id_retake_additional_tip">Consejos adicionales</string>
    <string name="id_retake_string">volver a tomar</string>
    <string name="id_retake_tip_1">Tus dedos miran a la cámara.</string>
    <string name="id_retake_tip_2">Tus dedos están dentro de la caja.</string>
    <string name="id_retake_tip_3">Usar iluminación interior normal</string>
    <string name="id_retry">Volver a procesar</string>
    <string name="id_stay_still_blue">3.Quédate quieto dentro del rectángulo</string>
    <string name="id_wait_auto">4.Espera la captura se realizará\nautomáticamente.\n(Hasta que el flash se apague)</string>
    <string name="title_button_camera_exit">Exit</string>
    <string name="title_button_camera_switch">Switch</string>
    <string name="title_button_camera_take_picture">Take a photo</string>
    <string name="tooltip_text_item_menu_instructor_trainee_query">Cerrar sesion</string>
</resources>