<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/identy_pop_up_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="0.5">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/identy_cam"
            android:layout_weight="0.7"
            android:contentDescription="@string/id_image_cd_todo"/>
        <TextView
            android:textSize="@dimen/id_h5"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_pic_qc_title"/>
        <TextView
            android:textSize="@dimen/id_h5"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_qc_retake"/>
    </LinearLayout>
    <RelativeLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <TextView
            android:textSize="@dimen/id_h4"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_hold_still"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <TextView
            android:textSize="@dimen/id_h5"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/id_retake_additional_tip"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/identy_msg"
                android:contentDescription="@string/id_image_cd_todo"/>
            <TextView
                android:textSize="@dimen/id_img_qc_messages"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_retake_tip_1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/identy_msg"
                android:contentDescription="@string/id_image_cd_todo"/>
            <TextView
                android:textSize="@dimen/id_img_qc_messages"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_retake_tip_2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/identy_msg"
                android:contentDescription="@string/id_image_cd_todo"/>
            <TextView
                android:textSize="@dimen/id_img_qc_messages"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_retake_tip_3"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/retake_continue"
        android:background="@drawable/identy_button"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/id_retake_string"/>
</LinearLayout>
