<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="center"
        android:layout_weight="1"
        android:contentDescription="@string/id_image_cd_todo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center_vertical"
            android:id="@+id/retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id_retry"
            android:layout_weight="0.5"/>
        <Button
            android:layout_gravity="center_vertical"
            android:id="@+id/Ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id_ok"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>
