<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/identy_pop_up_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="1">
        <TextView
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_quality_failed"/>
        <ImageView
            android:id="@+id/full_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/id_image_cd_todo"/>
    </LinearLayout>
    <Button
        android:id="@+id/retake_continue"
        android:background="@drawable/identy_button"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/id_retake_string"/>
</LinearLayout>
