<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <com.identy.ui.PlayGifView
                android:layout_gravity="center"
                android:id="@+id/intro_gif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5">
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_intro_roll_front_camera"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_intro_roll_stay_still_blue"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_intro_roll_twist_down"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_intro_roll_twist_up"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:textColor="@android:color/black"
            android:gravity="center"
            android:id="@+id/intro_no_repeat"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="false"
            android:text="@string/id_dshow_again"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_regular"/>
        <Button
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:id="@+id/intro_skip"
            android:background="@drawable/identy_button"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/id_next"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/montserrat_regular"/>
    </RelativeLayout>
</LinearLayout>
