<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/identy_pop_up_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/identy_sed_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/identy_verify_retake"
            android:contentDescription="@string/id_image_cd_todo"/>
        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/identy_sed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/id_authentication_retake"/>
    </LinearLayout>
    <Button
        android:id="@+id/retake_sep"
        android:background="@drawable/identy_button"
        android:padding="20dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/id_retake_string"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
