<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/label_step_number"
            android:background="@android:color/transparent"
            android:paddingTop="50dp"
            android:layout_width="411dp"
            android:layout_height="82dp"
            android:text="@string/id_ocr_capture_document"
            android:ems="10"
            android:layout_centerInParent="true"
            android:inputType="textPersonName"
            android:outlineProvider="none"/>
        <TextView
            android:textSize="18dp"
            android:gravity="center"
            android:id="@+id/label_step_description"
            android:background="@android:color/transparent"
            android:layout_width="410dp"
            android:layout_height="47dp"
            android:text="@string/id_ocr_front_back_side"
            android:ems="10"
            android:layout_centerInParent="true"
            android:inputType="textPersonName"
            android:outlineProvider="none"/>
        <ImageView
            android:id="@+id/imageView2"
            android:background="@android:color/transparent"
            android:paddingTop="80dp"
            android:layout_width="412dp"
            android:layout_height="307dp"
            android:src="@drawable/id_ocr_intro_gallery_picker"
            android:outlineProvider="none"/>
        <TextView
            android:textSize="18dp"
            android:layout_gravity="left"
            android:id="@+id/textView"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/id_ocr_gallery_instructions"
            android:ems="10"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:gravity="center"
            android:id="@+id/intro_no_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/id_ocr_dshow_again"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <Button
            android:textColor="#47bbea"
            android:layout_gravity="right"
            android:id="@+id/intro_skip"
            android:background="#ffffff"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/id_ocr_continue"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
